# raspberry-pi-cpp-barcode

./: BarcodeReader.cxx  CMakeLists.txt  README.md
